--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint . --ext .ts,.tsx",
-    "format": "prettier --write ."
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+  "format": "prettier --write ."
   },
   "dependencies": {
     "next": "15.2.3",
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@eslint/js": "^9.25.1",
+    "@next/eslint-plugin-next": "^15.3.1",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -26,10 +27,12 @@
     "@typescript-eslint/parser": "^8.31.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.25.1",
-    "eslint-config-next": "15.2.3",
+    "eslint-config-next": "^15.2.3",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-next": "^0.0.0",
     "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "tailwindcss": "^4.0.14",
