--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,9 +1,7 @@
 {
   "semi": true,
   "singleQuote": true,
-  "printWidth": 80,
   "tabWidth": 2,
   "trailingComma": "es5",
-  "bracketSpacing": true,
-  "arrowParens": "avoid"
+  "printWidth": 100
 }
