--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-  "format": "prettier --write ."
+    "format": "prettier --write ."
   },
   "dependencies": {
     "next": "15.2.3",
@@ -16,7 +16,8 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
+    "@eslint/compat": "^1.2.9",
+    "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.25.1",
     "@next/eslint-plugin-next": "^15.3.1",
     "@tailwindcss/postcss": "^4",
