--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,9 @@
 {
   "semi": true,
   "singleQuote": true,
-  "printWidth": 100,
+  "printWidth": 80,
   "tabWidth": 2,
-  "trailingComma": "all",
+  "trailingComma": "es5",
   "bracketSpacing": true,
-  "arrowParens": "avoid",
-  "endOfLine": "auto"
+  "arrowParens": "avoid"
 }
