--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "cookies-next": "^5.1.0",
+    "js-cookie": "^3.0.5",
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -22,6 +23,7 @@
     "@eslint/js": "^9.25.1",
     "@next/eslint-plugin-next": "^15.3.1",
     "@tailwindcss/postcss": "^4",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
